<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllCategories"
    android:background="@color/home_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:padding="15dp"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/search"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bubblegum_sans"
            android:padding="10dp"
            android:text="@string/categories"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/grocery_background">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/groceries"
                        android:textSize="30sp"
                        android:textColor="@color/text"
                        android:fontFamily="@font/baloo"
                        android:padding="25dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expand_all"
                        android:textColor="@color/text"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/groceries"
                    android:layout_marginTop="-5dp"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/restaurant_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/restaurant"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="0dp"
                    android:fontFamily="@font/baloo"
                    android:padding="25dp"
                    android:text="@string/restaurant"
                    android:textColor="@color/text"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/text"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/takeout_background">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/takeout"
                        android:textSize="30sp"
                        android:textColor="@color/text"
                        android:fontFamily="@font/baloo"
                        android:padding="25dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expand_all"
                        android:textColor="@color/text"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/takeout"
                    android:layout_marginTop="-5dp"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/hotel_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/hotel"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel"
                    android:textSize="30sp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/baloo"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/text"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/hospital_background">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hospitals"
                        android:textSize="30sp"
                        android:textColor="@color/text"
                        android:fontFamily="@font/baloo"
                        android:padding="25dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expand_all"
                        android:textColor="@color/text"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/hospital2"
                    android:layout_marginTop="-5dp"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/park_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/parking_lots"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_lots"
                    android:textSize="30sp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/baloo"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/text"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/bank_background">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/banks"
                        android:textSize="30sp"
                        android:textColor="@color/text"
                        android:fontFamily="@font/baloo"
                        android:padding="25dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expand_all"
                        android:background="#00000000"
                        android:textColor="@color/text"
                        android:padding="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/banks"
                    android:layout_marginTop="-5dp"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/pharmacy_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/pharmacies"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pharmacies"
                    android:textSize="30sp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/baloo"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/text"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/gas_background">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gas_station"
                        android:textSize="30sp"
                        android:textColor="@color/text"
                        android:fontFamily="@font/baloo"
                        android:padding="25dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expand_all"
                        android:textColor="@color/text"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/gas_station"
                    android:layout_marginTop="-5dp"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/post_background">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/post_office"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_offices"
                    android:textSize="30sp"
                    android:textColor="@color/text"
                    android:fontFamily="@font/baloo"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:textColor="@color/text"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>